# rebirth-game

./: .gitignore  AGENTS.md  README.md  app.js  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  styles.css  vite.config.ts  vitest.config.ts
.github/: dialogue-refactor.patch.b64
.github/dialogue-refactor-parts/: 00
.github/workflows/: apply-content-system-v2.yml  apply-dialogue-refactor.yml  check.yml  ci.yml  debug-check.yml  deploy-cloudflare.yml  (+10 more)
data/: 2023.json  2024.json  2025.json  game-data.js  manifest.json
docs/: ARCHITECTURE.md  CHARACTERS.md  DEMO_CHAPTER.md  DESIGN.md  GAMEPLAY.md  README.md  architecture.md  demo-chapter.md  dialogue-writing.md  gameplay.md  maintenance.md  platform-modes.md  product-roadmap.md  rebirth-system.md  research-commitment.md  stability-and-accessibility.md  ui-system.md  ux.md
scripts/: .content-system-v2-part01  .content-system-v2-part02  .content-system-v2-part03  .content-system-v2-part04  build_data.py  check.py  check_scene_loading.mjs  dump2024.mjs  fix_v2_non_analytical_semantics.mjs  key_portrait.py  package.ps1  playwright.config.js  test_build_data.py  test_check.py  test_docs_style.py  test_maintainability_metrics.py  validate_bundle_size.mjs  validate_data.py  validate_frontend.js  validate_stability.js
src/: App.tsx  debate-glossary.css  immersive.css  main.tsx  platform-polish.css  platform-shell.css  platform-theme.css  platform.css  rebirth-v2.css  rebirth.css  research-ux.css  settings-polish.css  stability.css  start-menu.css  styles.css  timeline.css  types.ts
(+116 files in other folders)
